@@ -198,16 +198,6 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QSpinBox" name="durationType">
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-          <property name="buttonSymbols">
-           <enum>QAbstractSpinBox::NoButtons</enum>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="2">
          <widget class="QLabel" name="label_3">
           <property name="sizePolicy">
@@ -293,7 +283,11 @@
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QLineEdit" name="duration"/>
+         <widget class="QLineEdit" name="duration">
+          <property name="readOnly">
+           <bool>true</bool>
+          </property>
+         </widget>
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_9">
@@ -406,6 +400,13 @@
           </property>
           <property name="maximum">
            <double>999999.989999999990687</double>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLineEdit" name="durationType">
+          <property name="readOnly">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
